ft(profile):implementation of profile edit
    Implementation of endpoints to enable users view
    and edit profile details.

    Finished[#167728022]
